Fix fullscreen lyrics visibility by changing `display` to `block`.

--- a/static/style.css
+++ b/static/style.css
@@ -248,7 +248,7 @@ body {
 }
 
 .fullscreen-lyrics {
-    display: none;
+    display: block;
 }
 
 .fullscreen-lyrics.hidden {
